# TuK1-CPU

./: .gitignore  CMakeLists.txt  README.md  exe.logs  exe2.logs  exe3.logs  exe7.logs  exe8.logs  exe_utils.py  main.cpp  plot.py  plot_custom_data.py  plot_utils.py  prev.jupyter.logs  proc_utils.py  requirements.txt  storage.py  tuk_cpu.exe.stackdump
cmake/: FindPAPI.cmake
scripts/: determine_threads.py  kill_tuk_cpu.sh
src/: BenchmarkConfig.h  HitStrategy.h  Scan.h  ScanConfig.h  main.cpp  minimal_caches.cpp  minimal_setup.cpp
utils/: execution.py  proc.py  storage.py  test.py  viz.py
